fixed text-align

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ td{
 th{
     border: 1px solid purple;
     width: 125px;
-    text-align: center;
+    text-align: center !important;
     padding: 10px;
 }
 .course-details{
